# fx-AI-Trader

./: .gitignore  FX-AI-Trader.bat  check_now.py  index.html  package-lock.json  package.json  setup_task.ps1  test-api.bat  tsconfig.json  vite.config.ts
.github/workflows/: fx-cloud-notify.yml
src/: App.tsx  index.css  main.tsx
src-python/: Dockerfile  check_confidence.py  check_now.py  check_signals.py  cloud_scanner.py  cloudbuild.yaml  debug_features.py  debug_nan.py  deploy_gcp.md  gcloudignore  requirements.txt  requirements_cloud.txt  retrain_balanced.py  retrain_best.py  run_background.py  sweep_params.py  test_backtester.py  test_model.py  test_yahoo.py  train_dummy.py  train_yahoo.py
src-python/api/: scheduler.py  server.py
src-python/api/routes/: backtest.py  chart.py  model.py  settings.py  signals.py  trades.py
src-python/data/: database.py  economic_calendar.py  feature_engineer.py  oanda_client.py  pipeline.py  preprocessor.py  twelvedata_client.py  yahoo_client.py
src-python/models/: base_model.py  ensemble.py  lstm_model.py  trainer.py  xgb_model.py
src-python/strategies/: backtester.py  risk_manager.py  signal_generator.py
src-python/utils/: config.py  discord_notify.py  line_notify.py  logger.py  ssl_trust.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Backtest/: BacktestPage.tsx
src/components/Chart/: ChartPage.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/Model/: ModelPage.tsx
src/components/Settings/: SettingsPage.tsx
