[package]
name    = "fx-trader-desktop"
version = "1.0.0"
edition = "2021"

[lib]
name = "fx_trader_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri                      = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell         = "2"
tauri-plugin-store         = "2"
tauri-plugin-notification  = "2"
serde                      = { version = "1", features = ["derive"] }
serde_json                 = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
